added tailwind and nav component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import MainLayout from "../layouts/mainLayout.astro"
 ---
 
 <MainLayout title="Home">
-  <p>Yo</p>
+  <h1>Header Text</h1>
 </MainLayout>
