--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -1,5 +1,7 @@
 ---
-import "../styles/global.css";
+import Link from "../components/Link.astro";
+import Nav from "../components/Nav.astro";
+import "./src/styles/global.css"
 const { title } = Astro.props;
 ---
 <html lang="en">
@@ -12,7 +14,12 @@ const { title } = Astro.props;
   </head>
 
   <body>
-    <slot> Default Slot Text </slot>
+    <Nav>
+    </Nav>
+    <main>
+      <slot />
+    </main>
+    
   </body>
 
 </html>
