uploading b4 computer dies

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,5 @@
 import MainLayout from "../layouts/mainLayout.astro"
 ---
 
-<MainLayout title="Home">
-  <h1>Header Text</h1>
+<MainLayout title="Home" h1="TASK-MATS">
 </MainLayout>
