--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -1,6 +1,7 @@
 ---
-import Link from "../components/Link.astro";
-import Nav from "../components/Nav.astro";
+import Nav from "../components/nav.astro";
+import Foot from "../components/footer.astro"
+import Header from "../components/header.astro"
 import "./src/styles/global.css"
 const { title } = Astro.props;
 ---
@@ -14,12 +15,12 @@ const { title } = Astro.props;
   </head>
 
   <body>
-    <Nav>
-    </Nav>
+    <Header>
+    </Header>
+      <Nav></Nav>
     <main>
       <slot />
     </main>
-    
   </body>
-
+  <Foot></Foot>
 </html>
