--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,10 +1,12 @@
----
+<!-- ---
 import Link from "./link.astro"
 ---
-<nav>
+<nav class="">
   <ul>
       <li><Link href="/">Home</Link></li>
       <li><Link href="/people">People</Link></li>
       <li><Link href="/publications">Publications</Link></li>
   </ul>
-</nav>
+</nav> -->
+
+<!-- See src/components/header.astro -->
