--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import MainLayout from "../layouts/mainLayout.astro"
 ---
-
-<MainLayout title="Home" h1="TASK-MATS">
+<!-- index.astro -->
+<MainLayout title="Home" headerText="TASK-MATS">
 </MainLayout>
