--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -1,8 +1,7 @@
 ---
 import MainLayout from "../layouts/mainLayout.astro"
 ---
-<MainLayout title="publications" h1="Publications">
-  <body>
-    No publications exist at this moment
-  </body>
+<!-- publications.astro -->
+<MainLayout title="publications" headerText="Publications">
+  <p>No publications exist at this moment </p>
 </MainLayout>
