--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,4 +1,5 @@
-  <p>This project is maintained by: <a href="https://kastle-lab.github.io/"><small>KASTLE-Lab</small></a></p>
+  <!-- footer.astr -->
+  <footer>This project is maintained by: <a href="https://kastle-lab.github.io/"><small>KASTLE-Lab</small></a></footer>
 
 <style>
   a:link {
@@ -7,4 +8,10 @@
   a:hover{
     text-decoration:underline;
   }
+  footer{ position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    overflow: hidden;} 
 </style>
