--- a/src/pages/people.astro
+++ b/src/pages/people.astro
@@ -1,8 +1,7 @@
 ---
 import MainLayout from "../layouts/mainLayout.astro"
 ---
-<MainLayout title="people" h1="People">
-  <body>
-    No people exist at this moment
-  </body>
+<!-- people.astro -->
+<MainLayout title="people" headerText="People">
+   <p>No people here</p>
 </MainLayout>
