--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
-import MainLayout from "../layouts/mainLayout.astro"
+import Home from "../content/home.md"
 ---
 <!-- index.astro -->
-<MainLayout title="Home" headerText="TASK-MATS">
-</MainLayout>
+  <Home></Home>
