--- a/src/pages/people.astro
+++ b/src/pages/people.astro
@@ -1,7 +1,5 @@
 ---
-import MainLayout from "../layouts/mainLayout.astro"
+import Ppl from "../content/people.md"
 ---
 <!-- people.astro -->
-<MainLayout title="people" headerText="People">
-   <p>No people here</p>
-</MainLayout>
+<Ppl></Ppl>
