--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -1,7 +1,5 @@
 ---
-import MainLayout from "../layouts/mainLayout.astro"
+import Pubs from "../content/publications.md"
 ---
 <!-- publications.astro -->
-<MainLayout title="publications" headerText="Publications">
-  <p>No publications exist at this moment </p>
-</MainLayout>
+<Pubs></Pubs>
