how to center a div?

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,5 +1,5 @@
   <!-- footer.astr -->
-  <footer>This project is maintained by: <a href="https://kastle-lab.github.io/"><small>KASTLE-Lab</small></a></footer>
+  <footer class="flex-auto">This project is maintained by: <a href="https://kastle-lab.github.io/"><small>KASTLE-Lab</small></a></footer>
 
 <style>
   a:link {
