--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -1,5 +1,4 @@
 ---
-import Nav from "../components/nav.astro";
 import Foot from "../components/footer.astro"
 import Header from "../components/header.astro"
 import "./src/styles/global.css"
@@ -16,13 +15,18 @@ const { title, headerText} = Astro.props;
   </head>
 
   <body class="min-h-screen flex flex-col">
+    <div class="flex">
     <Header h1Text={headerText} imageSrc="../../public/logo.png">
     </Header>
-      <Nav></Nav>
-    <main class="flex-auto container mx-auto px-4 py-6 ">
-      <slot ></slot>
-    </main>
+  </div>
+  <div class="flex-1 px-4 py-6 container mx-auto">
+    <slot >
+    </slot>
+  </div>
+      
+
   </body>
-  <Foot></Foot>
+  <Foot>
+  </Foot>
 </html>
 
