--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,17 +1,2 @@
   <!-- footer.astr -->
-  <footer class="flex-auto">This project is maintained by: <a href="https://kastle-lab.github.io/"><small>KASTLE-Lab</small></a></footer>
-
-<style>
-  a:link {
-    text-decoration: none;
-  }
-  a:hover{
-    text-decoration:underline;
-  }
-  footer{ position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 100px;
-    width: 100%;
-    overflow: hidden;} 
-</style>
+  <footer class="bottom-0 absolute max-w-xs">This project is maintained by: <a class="hover:underline " href="https://kastle-lab.github.io/"><small>KASTLE-Lab</small></a></footer>
