--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,2 +1,2 @@
   <!-- footer.astr -->
-  <footer class="bottom-0 absolute max-w-xs">This project is maintained by: <a class="hover:underline " href="https://kastle-lab.github.io/"><small>KASTLE-Lab</small></a></footer>
+  <footer class="bottom-0 max-w-xs">This project is maintained by: <a class="hover:underline " href="https://kastle-lab.github.io/"><small>KASTLE-Lab</small></a></footer>
