--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Foot from "../components/footer.astro"
 import Header from "../components/header.astro"
-import "./src/styles/global.css"
+import "../styles/global.css"
 const { title, headerText} = Astro.props;
 ---
 <!-- mainLayout.astro -->
