fixed logo path

--- a/src/layouts/mainLayout.astro
+++ b/src/layouts/mainLayout.astro
@@ -16,7 +16,7 @@ const { title, headerText} = Astro.props;
 
   <body class="flex auto-rows-auto ">
     <div class="">
-    <Header h1Text={headerText} imageSrc="../../public/logo.png">
+    <Header h1Text={headerText} imageSrc="./public/logo.png">
     </Header>
       <Foot>
   </Foot>
