--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -8,8 +8,8 @@ const { h1Text, imageSrc} = Astro.props;
   <nav class="">
   <ul class="p-24 py-0"> 
       <li><Link href="/">Home</Link></li>
-      <li><Link href="/atro-test/people">People</Link></li>
-      <li><Link href="/astro-test/publications">Publications</Link></li>
+      <li><Link href="/people">People</Link></li>
+      <li><Link href="/publications">Publications</Link></li>
   </ul>
 </nav> 
 </header>
